XIVY-1084 make Restclient History work